chore: update project files